--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /kosinski_VTipper/build/
 /kosinski_VTipper/dist/
+/kosinski_InClass5/nbproject/private/
+/kosinski_InClass5/build/
+/kosinski_InClass5/dist/
