Working on InClass5. Started Assignment 5.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /kosinski_InClass5/nbproject/private/
 /kosinski_InClass5/build/
 /kosinski_InClass5/dist/
+/kosinski_PracticeObjects/nbproject/private/
