Finished PracticeObjects assignment. Started InsertFunApp assignment.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /kosinski_InClass5/build/
 /kosinski_InClass5/dist/
 /kosinski_PracticeObjects/nbproject/private/
+/kosinski_PracticeObjects/build/
+/kosinski_PracticeObjects/dist/
+/kosinski_InsertFunApp/nbproject/private/
+/kosinski_InsertFunApp/build/
