Completed InsertFunApp assignment.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /kosinski_PracticeObjects/dist/
 /kosinski_InsertFunApp/nbproject/private/
 /kosinski_InsertFunApp/build/
+/kosinski_InsertFunApp/dist/
