--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /kosinski_InsertFunApp/nbproject/private/
 /kosinski_InsertFunApp/build/
 /kosinski_InsertFunApp/dist/
+/kosinski_MidTerm/nbproject/private/
