HighLow Assignment completed.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /kosinski_InsertFunApp/dist/
 /kosinski_MidTerm/nbproject/private/
 /kosinski_MidTerm/build/
+/kosinski_HighLow/nbproject/private/
+/kosinski_HighLow/build/
